# tests

./: .gitignore  .gitlab-ci.yml  .gitmodules  Installing_tmux_at_school.txt  Keysub_fully_commented.c  Makefile  Ternary.tcl  argTest.c  argtest.sh  arrayIndexError.c  arrayIndexError.s  arrayInitialization.c  binrep.c  callgrep  cgrep  charvalue.c  codeGolf.c  commaTest.c  dataframe_columns.py  debug.h  debug_macro_test.c  defgrep  dirLocation.sh  envtest.c  externTest.c  fileExists.sh  fprintf_const.c  getEnvTest.c  gitChecker.sh  if.sh  indexToExt.c  input.txt  install_log.sh  isLastIterTest.c  keysub.c  keysub_full_comment.c  knowledge  language_tasks.org  lcgrep  lineWrapper.c  (+51 more)
ASM_tests/: add.s  asm_project  main.c  main.s  makefile  sum.s
AppleScript_tests/: mailtool.osa  mailtool.py  parse_args.scpt  prompt.asc
Autotools_tests/Autotools_tutorial/: .gitignore  Makefile.am  README.md  configure.ac  tutorial-clean.sh  tutorial-run.sh
Autotools_tests/Autotools_tutorial/srcx/: Makefile.am  greet.c  greet.h  main.c
BASH_tests/: analyze_python_opts.sh  ansi_to_rgb.py  ansi_to_rgb.sh  append_args_star_vs_at.sh  array_slice.sh  bash-5.3-signals.sh  bash_dash_c_argv0.sh  bash_join.sh  bash_normpath.sh  bash_relpath.bash  bash_test_z_n.sh  bash_unansi.sh  case-in-subshell.sh  defgrep  delegate_completion.sh  demo-completion-with-colons.sh  detect_sourcing.sh  dollar_sign_at.sh  dup-and-get-xtrace-even-with-2-dev-null.sh  empty-ish-if-conditions.sh  errexit_test.sh  function.sh  function_args.sh  get_trap.sh  getopt.sh  good_options.sh  google_eval.sh  here_doc_string.sh  if.sh  my_option_parsing.sh  named_pipe.sh  nameref_array.bash  newScript.sh  new_script_with_posargs.sh  nullglob.bash  option_parsing.sh  ordsoumet-completion.bash  p.use-profile.sh  passing_arrays.sh  pipe_test.sh  (+24 more)
CMakeTests/: .gitignore
CMakeTests/ClimbingStats/: CMakeLists.txt  README.md  climbingstats-config.cmake.in
CMakeTests/ClimbingStats/install-dir/lib/cmake/climbingstats-3.14.15/: ClimbingStatsTargets-relwithdebinfo.cmake  ClimbingStatsTargets.cmake  climbingstats-config.cmake  climbingstats-version.cmake
CMakeTests/ClimbingStats/src/: CMakeLists.txt
CMakeTests/ClimbingStats/src/climber/: CMakeLists.txt  climber.c  climber.h
CMakeTests/ClimbingStats/src/climbingstats/: CMakeLists.txt  climbingstats.F90  climbingstats.c  climbingstats.h
CMakeTests/ClimbingStats/src/climbingtool/: CMakeLists.txt  main.c
CMakeTests/CoolLib/: CMakeLists.txt  config.cmake
CMakeTests/CoolLib/src/: CMakeLists.txt
CMakeTests/CoolLib/src/LeatherJacket/: CMakeLists.txt  leatherjacket.c  leatherjacket.h
CMakeTests/CoolLib/src/Shades/: CMakeLists.txt  shades.c
CMakeTests/MPI_Info/: CMakeLists.txt  doit.sh
CMakeTests/UseCoolLib/: CMakeLists.txt  main.c
CMakeTests/Version_Links/: CMakeLists.txt  exec.c  lib.c  lib.h
CMakeTests/WithDirectories_Naive/: CMakeLists.txt
CMakeTests/WithDirectories_Naive/src/: say_hello.cpp
CMakeTests/WithStaticLib/: CMakeLists.txt  main.cpp  say_hello.cpp  say_hello.h
CMakeTests/build_shared_libs_scope/: CMakeLists.txt
CMakeTests/build_shared_libs_scope/subdir/: CMakeLists.txt
CMakeTests/cmake_module_path_env_var/: CMakeLists.txt  env_setup.dot
CMakeTests/cmake_module_path_env_var/modules/: phil_func.cmake
CMakeTests/default_install_prefix/: CMakeLists.txt  run.sh
CMakeTests/env_for_find/: CMakeLists.txt
CMakeTests/envvar_and_cmakevar/: CMakeLists.txt
CMakeTests/find_package_blas_lapack_fftw_test/: CMakeLists.txt
CMakeTests/foreach_test/: CMakeLists.txt  main.c
CMakeTests/fortran_preproc_based_on_filename/: CMakeLists.txt  README.md  include_file.hf  nopreproc.f90  preproc.F90
CMakeTests/install-local/: CMakeLists.txt  toplevel.c
CMakeTests/install-local/subdir/: CMakeLists.txt  subdir.c
CMakeTests/install_custom_target/: CMakeLists.txt
CMakeTests/package-test-doc/: CMakeLists.txt  climbingstats.c  climbingstats.h
CMakeTests/package_target_install_code/: CMakeLists.txt  README.md  configure_file.in
CMakeTests/symbol-override/: CMakeLists.txt  README.md  a.c  b.c  main.c  rpnphy-custom.c  rpnphy-override.c  rpnphy.c  rpnshades.h
CMakeTests/symbol-override/defines_version/: CMakeLists.txt  doit.sh  gemdyn.c  interface.h  rpnphy-custom.h  rpnphy.c  rpnshades.c
CMakeTests/symbol-override/linker_version/: CMakeLists.txt  doit.sh  gemdyn.h  main.c  rpnphy.h
CMakeTests/symbol-override/overrides_shades/: CTestTestfile.cmake  DartConfiguration.tcl
CPP_tests/: boost_test.cpp  closest_multiple.cpp  derived_cannot_access_base_private_attrib.cpp  initializer_test.cpp  main.cpp  main.s  os_test.cpp  return_reference_to_local.cpp  switch_case_expression.cpp  test_quote.cpp  thread_test.cpp  volatile_in_stream.cpp
CPP_tests/boost_logging/: CMakeLists.txt  main.cpp
CPP_tests/boost_logging_logger/: CMakeLists.txt  main.cpp
CPP_tests/boost_logging_sink/: CMakeLists.txt  main.cpp
CPP_tests/calling_convention/: .gitignore  CMakeLists.txt  Makefile  frmn.f  main.cpp  rmn.c
CPP_tests/destructor_of_globals/: CMakeLists.txt  OtherClass.cpp  OtherClass.h  PhilLogger.cpp  PhilLogger.hpp  main.cpp
CPP_tests/variadic_templates/: CMakeLists.txt  main.cpp  variadic.hpp
CS_tests/: hello_world.cs
C_tests/: AVR_macros.c  Makefile  Parse_float.c  allocate_loop.c  argTest.c  arrayInitialization.c  atoiTest.c  atoi_test.c  commaTest.c  complex_num.c  const_ptr.c  constant_string_compare.c  ctypes  debug.h  debug_macro_test.c  emptyStrTest.c  endian.c  endian_configure.c  enum_size.c  exitTest.c  fast_array_pointer_diff.c  fildDescriptorTest.c  fizzbuzz.c  float_precision  float_precision.c  getEnvTest.c  getch_test.c  getpwnam_test.c  goto-ub.c  indexToExt.c  (+51 more)
C_tests/dlopen_test/: CMakeLists.txt  arithmetic_mean.c  geometric_mean.c  main.c  plugin_interface.h
C_tests/switch_fallthrough_warning/: CMakeLists.txt  main.c
C_tests/transitive_static_lib/: CMakeLists.txt  README.md  dotproduct.c  dotproduct.h  main.c  multiply.c  multiply.h
C_tests/transitive_static_lib/test_with_makefile/: Makefile  dotproduct.c  dotproduct.h  multiply.c  multiply.h
(+1800 files in other folders)
