cmake_minimum_required(VERSION 3.10)
project(boost_logging)
set(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Boost COMPONENTS log REQUIRED)
FIND_PACKAGE(Threads)
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main ${Boost_LOG_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})